--- a/css/main.css
+++ b/css/main.css
@@ -572,6 +572,10 @@ input[type=radio]:checked + .review-mark-label {
   box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.5);
 }
 
+.setup-open-icon:focus {
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.5);
+}
+
 .setup-open-icon,
 .setup-user-pic {
   width: 40px;
